2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/29_ConvIntToInt.deca
// Description:
//    Programme : conv int int
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 18/01/2024
{
    int x =3, y =5;
    y = (int) (y);
}