2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/41_ClassInMain.deca
// Description:
//    Programme definition d'une classe dans main
// Resultats:
//      Programme incorrecte syntaxiquement :8:4: missing '}' at '{'
// Historique:
//    cree le 18/01/2023
class A {
    {
        print("je suis dans main !");
    }
}
{
    int x,y;
    x = 55;
    class A{
        
    }
}